changed mongo db name

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,7 +62,7 @@ application.router=prod.Routes
 
 Dev {
     mongodb {
-        uri = "mongodb://localhost:27017/pla_stub"
+        uri = "mongodb://localhost:27017/tir_submission__stub"
     }
 }
 
