TAVC-Logging added logging and removed standard auth from controller

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,10 +82,16 @@ controllers {
       needsAuditing = false
     }
 
-  controllers.SubmissionStubController = {
+   controllers.SubmissionStubController = {
       needsAuth = false
       needsLogging = true
       needsAuditing = false
+    }
+
+    controllers.RegistrationController = {
+        needsAuth = false
+        needsLogging = true
+        needsAuditing = false
     }
 
 }
